# bbterminal

./: .gitattributes  .gitignore  .lintstagedrc.js  .uncommitted.diff  CLAUDE.md  NEW_FEATURES.md  README.md  backup-before-cli-update.sql  loyalty4g_login.py  loyalty4g_upload.py  package-lock.json  package.json  upscale_logos.py
backend/: .dockerignore  Dockerfile  airs_scanner.py  deps.py  diagnose.py  fx_rates.py  main.py  openapi.json  portfolio.py  pyproject.toml  requirements.txt  scheduler.py
backend/.next/: trace  trace-build
backend/common/: __init__.py  cron.py  db_errors.py  retry.py
backend/index_universe/: acwi.py  apply_overrides.py  backfill_isin.py  backfill_market_cap.py  discover_overrides.py  gf_ticker_overrides.json  name_overrides.json  sp500.py
backend/ingest/: _gurufocus_http.py  acquire.py  api_usage.py  constants.py  dedupe.py  delisting.py  earnings.py  extend_primary.py  fill_ticker.json  flatten.py  gurufocus_url.py  load_into_supabase.py  longequity_universe.py  metric_upsert.py  prices.py  prune_companies.py  resolve_tickers.py  staleness.py  transformation.py
backend/leonteq/: api_client.py  scraper.py
backend/momentum/: backtest.py  data.py  explain.py  schedule.py  scoring.py  signals.py
backend/routers/: __init__.py  _admin_health.py  _admin_payloads.py  _auth_middleware.py  _cache_headers.py  _network_diag.py  _schedule_backfill.py  _schedule_hydration.py  _schedule_snapshots.py  _sse.py  admin.py  airs.py  auth.py  benchmarks.py  companies.py  earnings.py  earnings_portfolios.py  exchange_fees.py  fee_config.py  fx.py  (+10 more)
(+564 files in other folders)
